--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@playwright/test": "^1.52.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.37",
