--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "create-admin": "ts-node src/scripts/createLocalAdmin.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
@@ -36,6 +37,9 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "ts-node": "^10.9.2",
+    "uuid": "^9.0.1",
+    "@types/uuid": "^9.0.8"
   }
 }
