--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/analytics": "^1.5.0",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.294.0",
+    "papaparse": "^5.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
@@ -24,6 +25,7 @@
     "@playwright/test": "^1.52.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20.10.0",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/react-router-dom": "^5.3.3",
